fix z-index of theme button

--- a/src/pages/auth/Login.css
+++ b/src/pages/auth/Login.css
@@ -160,7 +160,6 @@
 .signInWithGoogleButton:hover {
     background-color: var(--white-hover);
     color: var(--text-color-light-mode);
-
 }
 
 .dark.signInWithGoogleButton {
@@ -198,6 +197,7 @@
     padding: 5px 5px; /* Add padding to the button */
     font-size: 16px; /* Set the font size */
     color: #333;
+    z-index: 99;
 }
 
 .Dark-Light-Button:hover {
